[package]
name = "musix"
version = "0.1.0"
license = "MIT"
description = "Music player library for esoteric audio formats (music from C64,Amiga etc)"
edition = "2021"
build="build.rs"
authors = [ "Jonas Minnberg <sasq64@gmail.com>" ]
homepage = "https://github.com/sasq64/musicplayer"
exclude = ["/build", "/_skbuild", "/python", "/testmus"]

[build-dependencies]
cmake = "0.1.50"
cc = "1.0"
