[project]
name = "musix"
version = "0.1.1"
description = "Music library"
authors = [
    {name = "Jonas Minnberg", email="sasq64@gmail.com"}
]
license = {file = "LICENSE.md"}
readme = "PYTHON.md"
requires-python = ">=3.7"

[project.urls]
repository = "https://github.com/sasq64/musicplayer"

[build-system]
requires = [
    "setuptools>=42",
    "scikit-build>=0.13",
    "wheel",
    "ninja",
    "cmake>=3.12",
]
build-backend = "setuptools.build_meta"

